--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,3 +2,9 @@
 
 /* Paleta de cores */
 
+*{
+     margin: 0;
+     padding:0;
+     box-sizing: border-box;
+     font-family: Arial, Helvetica, sans-serif;
+}
