--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,7 +33,7 @@ section#login{
      position: absolute;
      background-color: white;
      width: 250px;
-     height: 500px;
+     height: 510px;
      border-radius: 20px;
      top:50%;
      left: 50%;
@@ -64,5 +64,82 @@ div#formulario > h1 {
 }
 
 div#formulario p{
+     font-size: 0.8em;
+     margin-bottom: 20px;
+}
+
+form > div.campo{
+     background-color: #5f2c82;
+     width: 100%;
+     display: block;
+     height:40px;
+     border-radius: 12px;
+     margin: 5px 0px;
+
+}
+
+div.campo label{
+     display: none;
+}
+
+div.campo > i{
+     color: white;
+     font-size: 1.8em;
+     width: 40px;
+     padding: 5px;
+}
+
+
+
+
+div.campo > input:focus{
+     border: none;
+     background-color: azure;
+}
+div.campo > input{
+     background-color: #deadf180;
+     font-size: 1em;
+     width:calc(100% - 45px);
+     height: 100%;
+     border-radius: 12px;
+     transform: translateY(-3.4px);
+     border: 2px solid #5f2c82;
+     padding: 0 5px;
+}
+
+form > input[type=submit]{
+display: block;
+font-size: 1em;
+width: 100%;
+height: 40px;
+background-color: #3725d4;
+color: white;
+border: none;
+border-radius:5px;
+cursor: pointer;
+}
+
+form > input[type=submit]:hover{
+     background-color: #5745f8;
+}
+
+form > a.botao{
+     display: block;
+     font-size:1em;
+     text-align: center;
+     width: 100%;
+     padding: 10px 0;
+     background-color: #2577d4;
+     border-radius: 5px;
+     text-decoration: none;
+     color: azure;
+     margin-top: 5px;
+}
+
+form > a.botao:hover{
+     background-color:#084181;
+}
+
+font > a.botao > i {
      font-size: 0.8em;
 }
