--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,7 +33,7 @@ section#login{
      position: absolute;
      background-color: white;
      width: 250px;
-     height: 510px;
+     height: auto;
      border-radius: 20px;
      top:50%;
      left: 50%;
