--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,7 +33,7 @@ section#login{
      position: absolute;
      background-color: white;
      width: 250px;
-     height: auto;
+     height: 530px;
      border-radius: 20px;
      top:50%;
      left: 50%;
@@ -75,6 +75,7 @@ form > div.campo{
      height:40px;
      border-radius: 12px;
      margin: 5px 0px;
+     padding: 1px;
 
 }
 
@@ -102,7 +103,7 @@ div.campo > input{
      width:calc(100% - 45px);
      height: 100%;
      border-radius: 12px;
-     transform: translateY(-7px);
+     transform: translateY(-8px);
      border: 2px solid #5f2c82;
      padding: 0 5px;
 }
